--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
+<div><img src="C:\Users\jerem\myproject\unnamed1.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 
 </body>
 </html>
