--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <p>A new line in our file!</p>
 <div><img src="C:\Users\jerem\myproject\unnamed1.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 <p>This line is here to show how merging works.</p>
+    <p>This line was created from the Github website on the vanilla branch</p>
 
 
 </body>
