--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div><img src="C:\Users\jerem\myproject\unnamed1.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 <p>This line is here to show how merging works.</p>
     <p>This line was created from the Github website on the vanilla branch</p>
-
+<p>This line is to help me understand how Git Revert works</p>
 
 </body>
 </html>
